* Display list of modified schema fields above the preview iframe * Fixed double scrollbar situation with the preview iframe

--- a/public/css/user.less
+++ b/public/css/user.less
@@ -9,8 +9,18 @@
   border: 0;
   margin: 0;
   padding: 0;
+  transform: scale(0.64);
+}
+
+.apos-workflow-preview-iframe
+{
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border: 0;
+  margin: 0;
+  padding: 0;
   overflow: scroll;
-  transform: scale(0.8);
 }
 
 .apos-workflow-preview-page
@@ -125,5 +135,14 @@
   .apos-table td a {
     display: inline;
     padding-right: 24px;
+  }
+}
+
+.apos-ui .apos-workflow-modified-fields {
+  width: 64%;
+  margin: 24px 0 12px 18%;
+  font-weight: bold;
+  .apos-workflow-hint {
+    font-weight: normal;
   }
 }
